<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@drawable/background"
    tools:context=".Login"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,TextSizeCheck" />




    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/name_5"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:ignore="LabelFor,TextContrastCheck" />


    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/number"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:ignore="LabelFor,TextContrastCheck" />
    <EditText
        android:id="@+id/Retypepassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/number_1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:ignore="LabelFor,TextContrastCheck" />



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/confirm_button"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/next_page"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>