<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Switch"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/next_page"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="60dp"
        android:layout_height="77dp"
        android:layout_below="@+id/Register"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        tools:ignore="ObsoleteLayoutParam" />
    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/other_page"
        android:textSize="20sp"
        android:textStyle="bold" />



</LinearLayout>